--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,9 +10,9 @@ html {
 
 /* Apply styles to HTML elements */
 body {
-  background-color: #000000;
-  color: #f4b627;
-  font-family: Arial, sans-serif;
+  background-color: #126c26;
+  color: #d3abcd;
+  font-family: fantasy;
   margin: 0;
   padding: 0;
   display: flex;
@@ -21,8 +21,8 @@ body {
 }
 
 header {
-  background-color: #f4b627;
-  color: #000000;
+  background-color: #d3abcd;
+  color: #126c26;
   text-align: center;
   padding: 0.25em;
   width: 100%;
@@ -30,7 +30,7 @@ header {
 
 h1 {
   font-size: 40px;
-  font-family: cursive;
+  font-family: monospace;
 }
 
 nav {
@@ -47,11 +47,11 @@ nav li {
 }
 nav a {
   text-decoration: none;
-  color: #f4b627;
+  color: #d3abcd;
 }
 nav a:hover {
-  color: #000000;
-  background-color: #f4b627;
+  color: #126c26;
+  background-color: #d3abcd;
   font-weight: bolder;
 }
 
@@ -59,7 +59,7 @@ main {
   display: flex;
   box-sizing: border-box;
   width: 90%;
-  border: 10px outset #f4b627;
+  border: 10px outset #d3abcd;
   margin: 0.5em;
   padding: 0.5em;
 }
@@ -71,4 +71,129 @@ main section {
   margin: 0.5em;
   padding: 0.25em;
   float: left;
+  width: 30%;
+}
+main section a {
+  color: #126c26;
+  background-color: #d3abcd;
+}
+main section .tiny {
+  font-size: 11px;
+}
+main section img {
+  width: 85%;
+}
+
+section {
+  margin: 20px;
+}
+
+footer {
+  background-color: #a98d8d;
+  color: #d3abcd;
+  text-align: center;
+  padding: 0.25em;
+  width: 100%;
+}
+
+.rsvp-button {
+  border-radius: 10px;
+  font-family: Garamond, serif;
+  background-color: #a98d8d;
+  color: #d3abcd;
+  padding: 10px 20px;
+  border: 2px solid #d3abcd;
+  margin-left: 50px;
+  text-decoration: none;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.rsvp-button:hover {
+  background-color: #937070;
+}
+
+@media (max-width: 850px) {
+  main {
+    background-color: rgb(111, 177, 4);
+  }
+}
+@media (max-width: 400px) {
+  main {
+    background-color: rgb(92, 4, 92);
+    flex-direction: column;
+  }
+  main section {
+    width: 100%;
+    margin: 0.5em;
+  }
+  .rsvp-button {
+    font-size: 16.5px;
+  }
+}
+.menu-toggle {
+  display: none;
+  cursor: pointer;
+  padding: 10px;
+  /* Define the styles for the three bars of the hamburger icon */
+}
+.menu-toggle .bar {
+  width: 30px;
+  height: 3px;
+  background-color: #333;
+  margin: 6px 0;
+  transition: 0.4s;
+}
+
+/* Styles for the mobile menu */
+.mobile-menu {
+  display: block;
+}
+.mobile-menu ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  text-align: center;
+}
+.mobile-menu ul li {
+  margin: 15px 0;
+}
+.mobile-menu ul li a {
+  text-decoration: none;
+  color: #a98d8d;
+}
+
+@media (max-width: 400px) {
+  .menu-toggle {
+    display: block; /* Show the menu toggle icon */
+  }
+  .mobile-menu {
+    display: none;
+    background-color: #a98d8d;
+    top: 60px;
+    width: 100%;
+    box-shadow: 0 4px 6px rgba(208, 198, 198, 0.1);
+    z-index: 2;
+  }
+  .mobile-menu ul li {
+    margin: 2px 0px;
+    text-align: left;
+  }
+  .mobile-menu ul li a {
+    margin: 3px 0;
+    color: #126c26;
+  }
+  .mobile-menu ul li a:hover {
+    background: white;
+    color: #126c26;
+  }
+}
+.menu-toggle.active .bar:nth-child(1) {
+  transform: rotate(-45deg) translate(-5px, 6px);
+}
+.menu-toggle.active .bar:nth-child(2) {
+  opacity: 0;
+}
+.menu-toggle.active .bar:nth-child(3) {
+  transform: rotate(45deg) translate(-5px, -6px);
 }/*# sourceMappingURL=styles.css.map */
